--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="row" id="div1">
                <nav>
                    <span class="col-lg-1 hidden-sm hidden-xs hidden-md"></span>
-                   <a href="Index.html" class="col-lg-1 text-center">Steve Jobs</a>
+                   <a href="index.html" class="col-lg-1 text-center">Steve Jobs</a>
                    <a href="biography.html" class="col-lg-1 text-center">Biography</a>
                    <a href="javascript:void(0)" onclick="pict()" class="col-lg-1 text-center">Pictures</a>
                    <a href="javascript:void(0)" onclick="vid()" class="col-lg-1 text-center">Videos</a>
