--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
                                   <span class="icon-bar"></span>
                                   <span class="icon-bar"></span>
                              </button>
+                             <a href="index.html" class="navbar-brand">Steve Jobs</a>
                         </div>
                         
-                        <div class="navbar-collapse" id="abc">
+                        <div class="navbar-collapse collapse" id="abc">
                              <ul class="nav navbar-nav">
                                   <li class="active"> <a href="index.html">Steve Jobs</a></li>
                                   <li> <a href="biography.html">Biography</a></li>
