--- a/index.html
+++ b/index.html
@@ -16,29 +16,18 @@
         
      </head>
 <body>
-        <nav class="navbar navbar-inverse">
-                                         <div class="container-fluid">
-                                             <div class="navbar-header">
-                                                      <button class="navbar-toggle" data-toggle="collapse" data-target="#kbo">
-                                                           <span class="icon-bar"></span>
-                                                           <span class="icon-bar"></span>
-                                                           <span class="icon-bar"></span>
-                                                      </button>
-                                                      <a href="index.html" class="navbar-brand">Steve Jobs</a>
-                                             </div>
+        <div class="container-fluid">
+        <div class="row" id="div1">
+               <nav>
+                   <span class="col-lg-1 hidden-sm hidden-xs hidden-md"></span>
+                   <a href="index.html" class="col-lg-1 text-center">Steve Jobs</a>
+                   <a href="biography.html" class="col-lg-1 text-center">Biography</a>
+                   <a href="javascript:void(0);" onclick="pict()" class="col-lg-1 text-center">Pictures</a>
+                   <a href="javascript:void(0);" onclick="vid()" class="col-lg-1 text-center">Videos</a>
+                   <a href="book.html" class="col-lg-1 text-center">The Book</a>
 
-
-                                             <div class="navbar-collapse collapse" id="kbo">
-                                                   <ul class="nav navbar-nav">
-                                                        <li class="active"> <a href="index.html" >Steve Jobs</a></li>
-                                                        <li>  <a href="biography.html">Biography</a></li>
-                                                        <li> <a href="javascript:void(0);" onclick="pict()">Pictures</a></li>
-                                                        <li>   <a href="javascript:void(0);" onclick="vid()" >Videos</a></li>
-                                                        <li> <a href="book.html">The Book</a></li>
-                                                   </ul>
-                                             </div>
-                                         </div>
-                                    </nav>
+               </nav>
+        </div>
    
 
         <br/>
